# TheAwase

./: .gitignore  CLAUDE.md  LICENSE  README.md  physics_log.csv  pyproject.toml
.claude/: settings.json
docs/: GDD.md  phase1_verification_report.md  phase2_verification_report.md  project_spec_maseter.md
docs/plans/: 2026-02-13-float-response-improvement-design.md  2026-02-13-float-response-improvement-implementation.md  2026-02-16-awase-timing-indicator-design.md  2026-02-16-awase-timing-indicator-implementation.md
docs/research/: atari_mechanisms.md
scripts/: analyze_atari.py  analyze_float.py  analyze_physics.py  diagnose_ou_process.py  log_physics.py  propose_parameter_adjustments.py  run.sh  verify_dipole_peak.py  verify_dipole_peak_with_plot.py  verify_ou_correlation.py  verify_ou_correlation_with_plot.py  verify_tsun_timing.py  verify_tsun_timing_with_plot.py
src/theawase/: __init__.py  config.py  main.py
src/theawase/audio/: __init__.py
src/theawase/entities/: __init__.py  fish.py  particle.py
src/theawase/game/: __init__.py
src/theawase/input/: __init__.py  trackpad.py
src/theawase/physics/: __init__.py  bait.py  float_model.py  integrator.py  line.py  rod.py  utils.py
src/theawase/rendering/: __init__.py  debug_view.py  macro_view.py  timing_graph.py  timing_indicator.py
src/theawase/ui/: button.py
tasks/: lessons.md  todo.md
tests/: test_difficulty_config.py  test_fish_difficulty.py  test_tippet_angular_forces.py  verify_atari.py
tests/rendering/: test_timing_indicator.py
tests/ui/: test_button.py
