[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theawase"
version = "0.1.0"
description = "アワセ特化型ヘラブナ釣り物理シミュレータ"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hiroshi Igarashi"}
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
theawase = "theawase.main:main"

[tool.setuptools.packages.find]
where = ["src"]
